--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <title>Wbpack Exercise</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
-</body>
+    <h1 class="LeadS">Leaderboard</h1>
+   </body>
 </html>
